<resources>
    <string name="app_name">Silent Moon</string>
    <string name="title_home">Home</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_meditate">Meditate</string>
    <string name="title_music">Music</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="main_screen_background">Main screen background</string>
    <string name="silent_moon_logo">Silent Moon Logo</string>
    <string name="main_screen_center_picture">Main screen center picture</string>
    <string name="main_header">We are what we do</string>
    <string name="main_subtitle">Thousands of people are using silent\nmoon for smalls meditation</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="main_have_account_desc">Already have an account?</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_title">Hi %s, Welcome\nto Silent Moon</string>
    <string name="welcome_subtitle">Explore the app, find some peace of mind to prepare for meditation.</string>
    <string name="welcome_screen_background">welcome screen background</string>
    <string name="welcome_screen_bottom_element">Welcome screen bottom purple element</string>
    <string name="welcome_screen_picture_desc">welcome screen picture</string>
    <string name="welcome_screen_picture">welcome screen main picture</string>
    <string name="time_title">What time would you\nlike to meditate?</string>
    <string name="time_subtitle">Any time you can choose but we recommend first thing in the morning.</string>
    <string name="time_day_title">Which day would you\nlike to meditate?</string>
    <string name="day_subtitle">Everyday is best, but we recommend picking at least five.</string>
    <string name="save">save</string>
    <string name="no_thanks">no thanks</string>
    <string name="sunday">SU</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">TH</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sleep_screen_background">Sleep Screen Background</string>
    <string name="welcome_sleep">Welcome to Sleep</string>
    <string name="welcome_sleep_desc">Explore the new king of sleep. It uses sound and visualisation to create perfect conditions for refreshing sleep.</string>
    <string name="welcome_sleep_picture">Welcome sleep picture</string>
</resources>