<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_sleep"
        android:icon="@drawable/sleep_selector"
        android:title="@string/title_sleep" />
    <item
        android:id="@+id/navigation_meditate"
        android:icon="@drawable/meditate_selector"
        android:title="@string/title_meditate" />
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music_selector"
        android:title="@string/title_music" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/title_profile" />
</menu>