<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <activity
        android:id="@+id/navigation_home_activity"
        android:name="com.example.silentmoon.ui.home.HomeActivity"
        android:label="@string/title_home"
        app:destination="@id/navigation_home"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true"
        tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.silentmoon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sleep"
        android:name="com.example.silentmoon.ui.sleep.SleepFragment"
        android:label="@string/title_sleep"
        tools:layout="@layout/fragment_sleep" />

    <fragment
        android:id="@+id/navigation_meditate"
        android:name="com.example.silentmoon.ui.meditate.MeditateFragment"
        android:label="@string/title_meditate"
        tools:layout="@layout/fragment_meditate" />

    <activity
        android:id="@+id/navigation_music"
        android:name="com.example.silentmoon.ui.music.MusicActivity"
        android:label="@string/title_music"
        app:destination="@id/navigation_music"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true"
        tools:layout="@layout/activity_music" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.silentmoon.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>