<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/main_background_imageview"
        style="@style/background_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_screen_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_background" />

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginHorizontal="@dimen/logo_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/silent_moon_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <ImageView
        android:id="@+id/main_picture_imageview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/main_spacing"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_screen_center_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_imageview"
        app:srcCompat="@drawable/main_picture" />

    <TextView
        android:id="@+id/main_title_text"
        style="@style/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/top_margin"
        android:layout_marginTop="@dimen/main_spacing"
        android:text="@string/main_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_picture_imageview" />

    <TextView
        android:id="@+id/main_subtitle_text"
        style="@style/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:text="@string/main_subtitle"
        app:layout_constraintEnd_toEndOf="@id/main_title_text"
        app:layout_constraintStart_toStartOf="@id/main_title_text"
        app:layout_constraintTop_toBottomOf="@id/main_title_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn"
        style="@style/main_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toTopOf="@id/already_have_account"
        app:layout_constraintEnd_toEndOf="@id/main_title_text"
        app:layout_constraintStart_toStartOf="@id/main_title_text" />

    <LinearLayout
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/main_title_text"
        app:layout_constraintStart_toStartOf="@id/main_title_text">

        <TextView
            android:id="@+id/already_have_account_1"
            style="@style/upper_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_have_account_desc" />

        <TextView
            android:id="@+id/already_have_account_2"
            style="@style/upper_clickable_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_small_spacing"
            android:clickable="true"
            android:text="@string/login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>