<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:fitsSystemWindows="true"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/welcome_background"
        style="@style/background_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcome_screen_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/welcome_bg" />


    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="168dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="96dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/silent_moon_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/night_app_logo" />


    <TextView
        android:id="@+id/welcome_title"
        style="@style/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/top_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/top_margin"
        android:text="@string/welcome_title"
        android:textColor="@color/title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_imageview" />

    <TextView
        android:id="@+id/welcome_subtitle"
        style="@style/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="@id/welcome_title"
        app:layout_constraintStart_toStartOf="@id/welcome_title"
        app:layout_constraintTop_toBottomOf="@id/welcome_title" />

    <ImageView
        android:id="@+id/bottom_element"
        style="@style/background_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcome_screen_bottom_element"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/get_started_btn"
        app:srcCompat="@drawable/welcome_bottom_element" />

    <ImageView
        android:id="@+id/welcome_picture"
        style="@style/background_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcome_screen_picture_desc"
        app:layout_constraintBottom_toTopOf="@id/bottom_element"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/welcome_picture" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/welcome_screen_picture"
        android:paddingTop="@dimen/margin_55dp"
        android:src="@drawable/welcome_woman"
        app:layout_constraintBottom_toBottomOf="@id/welcome_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_subtitle" />

    <Button
        android:id="@+id/get_started_btn"
        style="@style/main_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_margin"
        android:backgroundTint="@color/light_gray"
        android:text="@string/get_started"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/welcome_title"
        app:layout_constraintRight_toRightOf="@id/welcome_title" />
</androidx.constraintlayout.widget.ConstraintLayout>