<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sleep_background"
    android:fitsSystemWindows="true"
    tools:context=".ui.sleep.SleepActivity">

    <ImageView
        android:id="@+id/sleep_background"
        style="@style/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/sleep_screen_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_sleep_bg" />

    <TextView
        android:id="@+id/sleep_welcome_title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/top_margin"
        android:layout_marginTop="@dimen/margin_100dp"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/welcome_sleep"
        android:textColor="@color/sleep_text_color"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/sleep_welcome_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sleep_welcome_subtitle"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/top_margin"
        android:layout_marginBottom="@dimen/margin_70dp"
        android:text="@string/welcome_sleep_desc"
        android:textColor="@color/sleep_text_color"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/sleep_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_welcome_title" />

    <ImageView
        android:id="@+id/sleep_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/top_margin"
        android:contentDescription="@string/welcome_sleep_picture"
        android:src="@drawable/welcome_sleep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sleep_background" />

    <Button
        android:id="@+id/sleep_get_started_btn"
        style="@style/main_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/top_margin"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>